# PP

./: .gitignore  CMakeLists.txt  build_and_run.sh  generate_MSVC_sln.bat  run.sh
Lab_1/: CMakeLists.txt  Lab1_EstimateThreads.cxx  Lab1_MultiThreadServer.cxx  Lab1_MultiThreadServerPhp.cxx  Lab1_NThreads.cxx  Lab1_OneThread.cxx  Lab1_OneThreadServer.cxx  Lab1_OneThreadServerPhp.cxx  Lab1_ParallelArray.cxx  Lab1_ThreadWithAttrOut.cxx  Lab1_ThreadWithParams.cxx  Lab1_ThreadsWithAttr.cxx
Lab_1/inc/: Lab1_Table.hxx  Lab1_ThreadManager.hxx  Lab1_WebServers.hxx  ThreadFunctions.h  ThreadFunctions.hxx  ThreadManager.h  ThreadManager.hxx  WebServers.hxx
Lab_1/src/: Lab1_Table.cxx  Lab1_ThreadFunctions.cxx  Lab1_ThreadManager.cxx  Lab1_WebServers.cxx  Lab1_main.cxx  Table.cxx  ThreadFunctions.cpp  ThreadFunctions.cxx  ThreadManager.cpp  ThreadManager.cxx  WebServers.cxx  main.cpp  main.cxx
Lab_1/task/: main.cpp  main_upgrade.cpp  run.sh  run_hey.sh  run_standart.sh  run_upgrade.sh
Lab_2/: CMakeLists.txt  Lab2_CheckMutex.cxx  Lab2_CheckNoMutex.cxx  Lab2_CompareMutexSpin.cxx  Lab2_CondVar.cxx  Lab2_FileChecker.cxx  Lab2_MapReduce.cxx
Lab_2/inc/: Lab2_FileChecker.hxx  Lab2_MapReduce.hxx  Lab2_Table.hxx  Lab2_TaskManager.hxx
Lab_2/src/: Lab2_FileChecker.cxx  Lab2_MapReduce.cxx  Lab2_Table.cxx  Lab2_TaskManager.cxx  Lab2_main.cxx
Lab_3/: CMakeLists.txt  Lab3_CompareReductionCritical.cxx  Lab3_Example19.cxx  Lab3_Example19Modified.cxx  Lab3_Example2.cxx  Lab3_Example2Critical.cxx  Lab3_Example2NoReduction.cxx  Lab3_Example2SharedId.cxx  Lab3_Filters.cxx  Lab3_Png.cxx
Lab_4/: CMakeLists.txt  Lab4_PoissonEquation.cxx
Table/: Table.cxx
scripts/: Lab4_PrintTable.sh  build_and_run.sh  hey_run.sh  run.sh  test_case_file_checker.sh
