file(GLOB LAB1_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cxx")
file(GLOB LAB1_INC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/inc/*.hxx")
set(LAB1_INC_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/inc")

add_executable(Lab_1 ${LAB1_SRC_FILES} ${LAB1_INC_FILES})

target_include_directories(Lab_1 PRIVATE ${LAB1_INC_DIRS})